<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="16dp"
            android:orientation="vertical"
            android:onClick="hideSoft">

            <TextView
                style="@style/CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team" />

            <EditText
                android:id="@+id/favourite_team_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/EnterTeam" />

            <TextView
                style="@style/CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/premierLeague" />
            <CheckBox
                android:id="@+id/ques1_cho1"
                style="@style/customCheck"
                android:text="@string/ManchesterCity"
                />
            <CheckBox
                android:id="@+id/ques1_cho2"
                style="@style/customCheck"
                android:text="@string/ListerCity"
                />
            <CheckBox
                android:id="@+id/ques1_cho3"
                style="@style/customCheck"
                android:text="@string/Chelsea"
                />

            <TextView
                style="@style/CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/bestPlayer" />
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/ques2_cho1"
                    style="@style/customCheck"
                    android:text="@string/Ronaldinho" />

                <RadioButton
                    android:id="@+id/ques2_cho2"
                    style="@style/customCheck"
                    android:text="@string/FrankLampard" />

                <RadioButton
                    android:id="@+id/ques2_cho3"
                    style="@style/customCheck"
                    android:text="@string/ThierryHenry" />
            </RadioGroup>
            <TextView
                style="@style/CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/cristiano" />

            <EditText
                android:id="@+id/ques3_answer"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/EnterCr" />
            <TextView
                style="@style/CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/salah"
                />
            <CheckBox
                android:id="@+id/ques4_cho1"
                style="@style/customCheck"
                android:text="@string/Yes" />
            <CheckBox
                android:id="@+id/ques4_cho2"
                style="@style/customCheck"
                android:text="@string/No" />
            <TextView
                style="@style/CustomText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worldCup"
                android:layout_marginTop="10dp" />
            <EditText
                android:id="@+id/ques5_answer"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/EnterNational" />

            <RatingBar
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:numStars="5"
                android:isIndicator="true"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/scoreOfAnswer"
                style="@style/CustomText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:visibility="gone"/>
            <Button
                android:id="@+id/final_answer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border"
                android:layout_marginTop="16dp"
                android:onClick="answer"
                android:text="@string/score"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>